<resources>
    <string name="app_name">GVCarpool</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_radar">Radar</string>
    <string name="title_profile">Profile</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logo">Logo</string>
    <string name="to_label">To:</string>
    <string name="from_label">From:</string>
    <string name="when_label">When:</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="name">Louie Laker</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget luctus
        magna. Duis a leo non erat iaculis varius eu quis nunc. Ut ornare leo quis facilisis tempus.
        In id sollicitudin nulla. Fusce posuere tincidunt enim vitae bibendum. Praesent ac nunc
        nulla. Duis ac lorem eu erat aliquam mattis vitae eget neque. Aliquam viverra fusce.</string>
    <string name="forestHills">Forest Hills</string>
    <string name="allendale">Allendale Campus</string>
    <string name="info">Info</string>
    <string name="details">Details</string>
    <string name="total_seats_label">Total Seats:</string>
    <string name="seats_available_label">Seats available:</string>
    <string name="gas_money_label">Gas money:</string>
    <string name="accept">Accept</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="logout">Logout</string>
    <string name="notes_label">Notes:</string>
    <string name="dollar_sign">$</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="request">Request</string>
    <string name="offer">Offer</string>
    <string name="type_label">Type:</string>
    <string name="enter_any_extra_details">Enter any extra details.</string>
    <string name="how_much_gas_money_per_person">How much gas money per person?</string>
    <string name="how_many_people_can_go">How many people can go?</string>
    <string name="when_do_you_want_to_leave">When do you want to leave?</string>
    <string name="where_are_you_leaving_from">Where are you leaving from?</string>
    <string name="where_do_you_want_to_go">Where do you want to go?</string>
</resources>
